Fixed MAGETWO-8884: Design of Image Sizing Panel is Broken in IE - buttons in IE8 - VDE Panel handler - Logo (cherry picked from commit dd854ef)

--- a/app/design/adminhtml/default/backend/css/admin.css
+++ b/app/design/adminhtml/default/backend/css/admin.css
@@ -232,7 +232,7 @@ button.primary.disabled,
 .vde-image-sizing .action-connect:hover,
 .vde-image-sizing .action-connect:active,
 .vde-image-sizing .action-connect.active,
-.vde-image-sizing .action-connect:disabled,
+.vde-image-sizing .action-connect[disabled],
 .suggest-expandable .action-show-all,
 .suggest-expandable .action-show-all:hover,
 .suggest-expandable .action-show-all:active,
@@ -277,19 +277,19 @@ button.primary.disabled,
     text-shadow: none;
 }
 
-.data-table .action-.delete:disabled,
-.data-table .action-delete:disabled,
-#product-variations-matrix .action-choose:disabled,
-.image-panel .action-close:disabled,
-.image-panel-controls .action-remove:disabled,
-.suggest-expandable .action-show-all:disabled,
-.fieldset-wrapper-title .action-add:disabled,
+.data-table .action-.delete[disabled],
+.data-table .action-delete[disabled],
+#product-variations-matrix .action-choose[disabled],
+.image-panel .action-close[disabled],
+.image-panel-controls .action-remove[disabled],
+.suggest-expandable .action-show-all[disabled],
+.fieldset-wrapper-title .action-add[disabled],
 #store-view-window [class^='action-close'],
 #store-view-window [class^='action-close']:hover,
 #store-view-window [class^='action-close']:active,
 #store-view-window [class^='action-close'].active,
-#store-view-window [class^='action-close']:disabled,
-.custom-file > .action-add:disabled,
+#store-view-window [class^='action-close'][disabled],
+.custom-file > .action-add[disabled],
 .image .action-delete,
 .image .action-delete:hover,
 .image .action-delete:active,
@@ -323,28 +323,28 @@ button.primary.disabled,
     top: 200px;
 }
 
-.data-table .action-.delete:disabled,
-.data-table .action-delete:disabled,
-#product-variations-matrix .action-choose:disabled,
-.image-panel .action-close:disabled,
-.image-panel-controls .action-remove:disabled,
-.suggest-expandable .action-show-all:disabled,
-.fieldset-wrapper-title .action-add:disabled,
+.data-table .action-.delete[disabled],
+.data-table .action-delete[disabled],
+#product-variations-matrix .action-choose[disabled],
+.image-panel .action-close[disabled],
+.image-panel-controls .action-remove[disabled],
+.suggest-expandable .action-show-all[disabled],
+.fieldset-wrapper-title .action-add[disabled],
 #store-view-window [class^='action-close'],
 #store-view-window [class^='action-close']:hover,
 #store-view-window [class^='action-close']:active,
 #store-view-window [class^='action-close'].active,
-#store-view-window [class^='action-close']:disabled,
-.custom-file > .action-add:disabled,
-.vde-tools-header .action-close:disabled,
+#store-view-window [class^='action-close'][disabled],
+.custom-file > .action-add[disabled],
+.vde-tools-header .action-close[disabled],
 .vde-image-sizing .action-reset,
 .vde-image-sizing .action-reset:hover,
 .vde-image-sizing .action-reset:active,
 .vde-image-sizing .action-reset.active,
 .vde-image-sizing .action-reset[disabled],
-.image .action-delete:disabled,
-.fieldset-wrapper-title .actions .action-delete:disabled,
-.address-list-item-actions .action-delete:disabled,
+.image .action-delete[disabled],
+.fieldset-wrapper-title .actions .action-delete[disabled],
+.address-list-item-actions .action-delete[disabled],
 [class^=" adminhtml-catalog-product-"] .page-actions .action-back,
 [class^=" adminhtml-catalog-product-"] .page-actions .action-back:hover,
 [class^=" adminhtml-catalog-product-"] .page-actions .action-back:active,
@@ -365,20 +365,6 @@ button.primary.disabled,
 .notification .action-close:active,
 .notification .action-close.active,
 .notification .action-close[disabled] {
-    border: none;
-    border-radius: 0;
-    background: none;
-    margin: 0;
-    padding: 0;
-    box-shadow: none;
-    text-shadow: none;
-}
-
-.vde-image-sizing .action-connect,
-.vde-image-sizing .action-connect:hover,
-.vde-image-sizing .action-connect:active,
-.vde-image-sizing .action-connect.active,
-.vde-image-sizing .action-connect:disabled {
     border: none;
     border-radius: 0;
     background: none;
